--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,9 @@ h4 {
 }
 /* line 7, ../sass/partials/_layout.scss */
 .q-nav header {
-  padding: 1%;
+/*  padding: 1%;*/
+    margin-top:10px;
+    margin-left:60px;
 }
 /* line 11, ../sass/partials/_layout.scss */
 .q-nav header h1, .q-nav header h4 {
@@ -136,6 +138,18 @@ h4 {
 .q-nav header h4 a:hover {
   color: #c4c2c2;
     
+}
+/*
+h4.email {
+    font:fantasy !important;
+    color:#C4C2C2;
+}
+*/
+
+h4.email a {
+    font-family: fantasy !important;
+    color: #969696 !important;
+    font-size: 20px;
 }
 
 /* line 34, ../sass/partials/_layout.scss */
